# frame-catalog

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  download-models.sh
models/: README.md
src/: database.rs  embeddings.rs  lib.rs  persistent_store.rs  retrieval.rs  vector_store.rs
